<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWitch"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/HeadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:textColor="@color/colorIconGray"
        android:textStyle="bold"
        android:textSize="23dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorIconGray"
        android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorIconGray"
        android:textSize="19dp"
        android:text="@string/Ischecked" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorIconGray"
        android:textSize="17dp"
        android:id="@+id/one"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textColor="@color/colorIconGray"
            android:text="@string/CheckTime" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:textSize="17dp"
            android:id="@+id/two"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textColor="@color/colorIconGray"
            android:text="@string/WhoToCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/colorIconGray"
            android:id="@+id/five"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textColor="@color/colorIconGray"
            android:text="@string/Who" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/colorIconGray"
            android:id="@+id/six"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:textSize="19dp"
            android:text="@string/phoneNumber" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:textSize="17dp"
            android:id="@+id/seven"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textColor="@color/colorIconGray"
            android:text="@string/SafeProblem" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eight"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorIconGray"
            android:textSize="17dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:text="&#160;&#160;&#160;&#160;&#160;&#160;"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIconGray"
            android:textSize="19dp"
            android:text="@string/HowToDeal" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nine"
            android:textColor="@color/colorIconGray"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:textSize="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:orientation="horizontal"
        android:background="@color/line"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorIconGray"
        android:text="@string/other"
        android:textSize="11dp"/>

</LinearLayout>
